# shepichess

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
benchmark/: CMakeLists.txt  benchmarks.cpp
src/: .clang-tidy  CMakeLists.txt  bitboard.cpp  bitboard.h  eval.h  hash_table.cpp  hash_table.h  logging.h  main.cpp  move.h  piece.h  position.cpp  position.h  uci_application.cpp  uci_application.h  uci_config.cpp  uci_config.h
tests/: CMakeLists.txt  test_bitboard.cpp  test_hash_table.cpp  test_position.cpp  test_uci_application.cpp  testbitboard.cpp
